--- a/.github/workflows/test-cases.yml
+++ b/.github/workflows/test-cases.yml
@@ -7,14 +7,15 @@
     открыта стартовая страница браузера
   test-data: |
     -
-  steps:
+  steps: |
     - Вводим имя https://hexlet-products-store.vercel.app/ в адресную строку
       браузера
     - Нажимаем Enter на клавиатуре.
-  expected-result: >
+  expected-results: |
     Загружается главная страница Hexlet store. Все элементы
     расположены правильно, шрифты и картинки отображаются корректно (в
     соответствии с макетом).
+    
 - summary: |
     Проверка входа в пустую Корзину
   requirement: |
@@ -24,15 +25,16 @@
   test-data: |
     Тестовые данные
     -
-  steps:
+  steps: |
     - Нажимаем кнопку "Cart"/"Корзина" в шапке сайта
-  expected-result: >
+  expected-results: |
     Пользователь попадает в Корзину. В Корзине отсутствуют товары.
     Присутствуют кнопки: "Очистить корзину" и "Продолжить покупки" (на русском
     или английском языке)
+    
 - summary: |
     Работает кнопка "Continue shopping"/"Продолжить покупки" в Корзине
-  requirement: >
+  requirement: |
     Из Корзины пользователь переходит на Главную страницу сайта с
     помощью кнопки "Continue shopping"/"Продолжить покупки"
   prerequisites: |
@@ -40,14 +42,15 @@
   test-data: |
     Тестовые данные
     -
-  steps:
+  steps: |
     - Нажимаем кнопку "Continue shopping"/"Продолжить покупки"
   expected-results: |
     Загружается Главная страница сайта
-- summary: >
+    
+- summary: |
     Работает возврат из Корзины на Главную страницу сайта с помощью кнопки
     "Назад"
-  requirement: >
+  requirement: |
     Из Корзины пользователь переходит на Главную страницу сайта с
     помощью кнопки "Назад" браузера
   prerequisites: |
@@ -55,54 +58,57 @@
   test-data: |
     Тестовые данные
     -
-  steps:
+  steps: |
     - Нажимаем кнопку "Назад" в браузере
-  expected-results: |+
+  expected-results: |
     Загружается Главная страница сайта
      
 - summary: |
     Проверка кнопки переключения языков
-  requirement: >
+  requirement: |
     Пользователь имеет возможность переключить язык интерфейса
     (английский или русский)
-  prerequisites: >
+  prerequisites: |
     Пользователь находится на Главной странице сайта. Данные на сайте
     отображаются на английском языке.
   test-data: |
     -
-  step 1:
+  steps: |
     - Нажимаем кнопку "Language" в шапке сайта
-  expected-result 1: |
+  expected-results: |
     появляется выпадающее меню с выбором языков (English/Russian)
+    
 - summary: |
     Проверка переключения языка интерфейса на русский
   requirement: |
     Пользователь имеет возможность переключить язык интерфейса на русский
-  prerequisites: >
+  prerequisites: |
     Пользователь находится на Главной странице сайта. Данные на сайте
     отображаются на английском языке.
   test-data: |
     -
-  steps:
+  steps: |
     - Нажимаем кнопку "Language" в шапке сайта
     - Выбираем кнопку "Russian" в выпадающем меню
-  expected-results: >
+  expected-results: |
     Язык интерфейса  сайта меняется на русский (всё, кроме
     оригинальных названий товаров и брендов) 
+    
 - summary: |
     Проверка переключения языка интерфейса на английский
   requirement: |
     Пользователь имеет возможность переключить язык интерфейса на английский
-  prerequisites: >
+  prerequisites: |
     Пользователь находится на Главной странице сайта. Данные на сайте
     отображаются на русском языке.
   test-data: |
     -
-  steps:
+  steps: |
     - Нажимаем кнопку "Язык" в шапке сайта
     - Выбираем кнопку "Английский" в выпадающем меню
   expected-results: |
     Язык интерфейса сайта меняется на английский 
+    
 - summary: |
     Проверка сворачивания выпадающего меню по нажатию на кнопку "Language".
   requirement: |
@@ -111,9 +117,9 @@
     Пользователь находится на Главной странице сайта. 
   test-data: |
     -
-  steps:
+  steps: |
     - Нажимаем кнопку "Language" в шапке сайта
     - Повтороно нажимаем кнопку "Language"
-  expected-results: >+
+  expected-results:  |
     При Повтороном нажатии на кнопку "Language", выпадающее меню с
     выбором языков сворачивается.
