--- a/.github/workflows/test-cases.yml
+++ b/.github/workflows/test-cases.yml
@@ -12,9 +12,7 @@
       браузера
     - Нажимаем Enter на клавиатуре.
   expected-results: |
-    Загружается главная страница Hexlet store. Все элементы
-    расположены правильно, шрифты и картинки отображаются корректно (в
-    соответствии с макетом).
+    Загружается главная страница Hexlet store. Все элементы расположены правильно, шрифты и картинки отображаются корректно (в соответствии с макетом).
     
 - summary: |
     Проверка входа в пустую Корзину
@@ -26,55 +24,48 @@
     Тестовые данные
     -
   steps: |
-    - Нажимаем кнопку "Cart"/"Корзина" в шапке сайта
+    - Нажимаем кнопку Cart в шапке сайта
   expected-results: |
-    Пользователь попадает в Корзину. В Корзине отсутствуют товары.
-    Присутствуют кнопки: "Очистить корзину" и "Продолжить покупки" (на русском
-    или английском языке)
+    Пользователь попадает в Корзину. В Корзине отсутствуют товары. Присутствуют кнопки: "Очистить корзину" и "Продолжить покупки" (на русском или английском языке)
     
 - summary: |
-    Работает кнопка "Continue shopping"/"Продолжить покупки" в Корзине
+    Работает кнопка Continue shopping в Корзине
   requirement: |
-    Из Корзины пользователь переходит на Главную страницу сайта с
-    помощью кнопки "Continue shopping"/"Продолжить покупки"
+    Из Корзины пользователь переходит на Главную страницу сайта с помощью кнопки Continue shopping
   prerequisites: |
     Пользователь находится в Корзине сайта
   test-data: |
     Тестовые данные
     -
   steps: |
-    - Нажимаем кнопку "Continue shopping"/"Продолжить покупки"
+    - Нажимаем кнопку Continue shopping
   expected-results: |
     Загружается Главная страница сайта
     
 - summary: |
-    Работает возврат из Корзины на Главную страницу сайта с помощью кнопки
-    "Назад"
+    Работает возврат из Корзины на Главную страницу сайта с помощью кнопки Назад
   requirement: |
-    Из Корзины пользователь переходит на Главную страницу сайта с
-    помощью кнопки "Назад" браузера
+    Из Корзины пользователь переходит на Главную страницу сайта с помощью кнопки Назад браузера
   prerequisites: |
     пользователь находится в Корзине сайта
   test-data: |
     Тестовые данные
     -
   steps: |
-    - Нажимаем кнопку "Назад" в браузере
+    - Нажимаем кнопку Назад в браузере
   expected-results: |
     Загружается Главная страница сайта
      
 - summary: |
     Проверка кнопки переключения языков
   requirement: |
-    Пользователь имеет возможность переключить язык интерфейса
-    (английский или русский)
+    Пользователь имеет возможность переключить язык интерфейса (английский или русский)
   prerequisites: |
-    Пользователь находится на Главной странице сайта. Данные на сайте
-    отображаются на английском языке.
+    Пользователь находится на Главной странице сайта. Данные на сайте отображаются на английском языке.
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку "Language" в шапке сайта
+    - Нажимаем кнопку Language в шапке сайта
   expected-results: |
     появляется выпадающее меню с выбором языков (English/Russian)
     
@@ -83,43 +74,39 @@
   requirement: |
     Пользователь имеет возможность переключить язык интерфейса на русский
   prerequisites: |
-    Пользователь находится на Главной странице сайта. Данные на сайте
-    отображаются на английском языке.
+    Пользователь находится на Главной странице сайта. Данные на сайте отображаются на английском языке.
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку "Language" в шапке сайта
-    - Выбираем кнопку "Russian" в выпадающем меню
+    - Нажимаем кнопку Language в шапке сайта
+    - Выбираем кнопку Russian в выпадающем меню
   expected-results: |
-    Язык интерфейса  сайта меняется на русский (всё, кроме
-    оригинальных названий товаров и брендов) 
+    Язык интерфейса  сайта меняется на русский (всё, кроме оригинальных названий товаров и брендов) 
     
 - summary: |
     Проверка переключения языка интерфейса на английский
   requirement: |
     Пользователь имеет возможность переключить язык интерфейса на английский
   prerequisites: |
-    Пользователь находится на Главной странице сайта. Данные на сайте
-    отображаются на русском языке.
+    Пользователь находится на Главной странице сайта. Данные на сайте отображаются на русском языке.
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку "Язык" в шапке сайта
-    - Выбираем кнопку "Английский" в выпадающем меню
+    - Нажимаем кнопку Язык в шапке сайта
+    - Выбираем кнопку Английский в выпадающем меню
   expected-results: |
     Язык интерфейса сайта меняется на английский 
     
 - summary: |
-    Проверка сворачивания выпадающего меню по нажатию на кнопку "Language".
+    Проверка сворачивания выпадающего меню по нажатию на кнопку Language.
   requirement: |
-    При повторном нажатии на кнопку "Language" выпадающее меню сворачивается.
+    При повторном нажатии на кнопку Language выпадающее меню сворачивается.
   prerequisites: |
     Пользователь находится на Главной странице сайта. 
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку "Language" в шапке сайта
-    - Повтороно нажимаем кнопку "Language"
+    - Нажимаем кнопку Language в шапке сайта
+    - Повтороно нажимаем кнопку Language
   expected-results:  |
-    При Повтороном нажатии на кнопку "Language", выпадающее меню с
-    выбором языков сворачивается.
+    При Повтороном нажатии на кнопку Language, выпадающее меню с выбором языков сворачивается.
