--- a/.github/workflows/test-cases.yml
+++ b/.github/workflows/test-cases.yml
@@ -1,73 +1,16 @@
 ---
 - summary: |
-    Проверка внешнего вида Главной страницы сайта
-  requirement: |
-    Сайт открывается и отображается корректно.
-  prerequisites: |
-    открыта стартовая страница браузера
-  test-data: |
-    -
-  steps: |
-    - Вводим имя https://hexlet-products-store.vercel.app/ в адресную строку
-      браузера
-    - Нажимаем Enter на клавиатуре.
-  expected-results: |
-    Загружается главная страница Hexlet store. Все элементы расположены правильно, шрифты и картинки отображаются корректно (в соответствии с макетом).
-    
-- summary: |
-    Проверка входа в пустую Корзину
-  requirement: |
-    При входе на сайт можно войти в Корзину, даже если в ней отстутсвуют товары.
-  prerequisites: |
-    Открыта главная страница сайта
-  test-data: |
-    Тестовые данные
-    -
-  steps: |
-    - Нажимаем кнопку Cart в шапке сайта
-  expected-results: |
-    Пользователь попадает в Корзину. В Корзине отсутствуют товары. Присутствуют кнопки: "Очистить корзину" и "Продолжить покупки" (на русском или английском языке)
-    
-- summary: |
-    Работает кнопка Continue shopping в Корзине
-  requirement: |
-    Из Корзины пользователь переходит на Главную страницу сайта с помощью кнопки Continue shopping
-  prerequisites: |
-    Пользователь находится в Корзине сайта
-  test-data: |
-    Тестовые данные
-    -
-  steps: |
-    - Нажимаем кнопку Continue shopping
-  expected-results: |
-    Загружается Главная страница сайта
-    
-- summary: |
-    Работает возврат из Корзины на Главную страницу сайта с помощью кнопки Назад
-  requirement: |
-    Из Корзины пользователь переходит на Главную страницу сайта с помощью кнопки Назад браузера
-  prerequisites: |
-    пользователь находится в Корзине сайта
-  test-data: |
-    Тестовые данные
-    -
-  steps: |
-    - Нажимаем кнопку Назад в браузере
-  expected-results: |
-    Загружается Главная страница сайта
-     
-- summary: |
     Проверка кнопки переключения языков
   requirement: |
     Пользователь имеет возможность переключить язык интерфейса (английский или русский)
   prerequisites: |
-    Пользователь находится на Главной странице сайта. Данные на сайте отображаются на английском языке.
+    Пользователь находится на Главной странице сайта. 
   test-data: |
     -
   steps: |
     - Нажимаем кнопку Language в шапке сайта
   expected-results: |
-    появляется выпадающее меню с выбором языков (English/Russian)
+    появляется выпадающее меню с выбором языков 
     
 - summary: |
     Проверка переключения языка интерфейса на русский
@@ -93,20 +36,61 @@
     -
   steps: |
     - Нажимаем кнопку Язык в шапке сайта
-    - Выбираем кнопку Английский в выпадающем меню
+    - Выбираем кнопку English в выпадающем меню
   expected-results: |
     Язык интерфейса сайта меняется на английский 
     
 - summary: |
-    Проверка сворачивания выпадающего меню по нажатию на кнопку Language.
+    Проверка автоматического сворачивания выпадающего меню выбора языка
   requirement: |
-    При повторном нажатии на кнопку Language выпадающее меню сворачивается.
+    При нажатии ЛКМ в любое поле, кроме кнопки Language, выпадающее меню  выбора языка сворачивается.
   prerequisites: |
     Пользователь находится на Главной странице сайта. 
   test-data: |
     -
   steps: |
     - Нажимаем кнопку Language в шапке сайта
-    - Повтороно нажимаем кнопку Language
+    - Нажимаем ЛКМ в любое поле, кроме кнопки Language
   expected-results:  |
-    При Повтороном нажатии на кнопку Language, выпадающее меню с выбором языков сворачивается.
+    Выпадающее меню с выбором языков сворачивается.
+
+- summary: |
+    Проверка подтверждения добавления товаров в Корзину 
+  requirement: |
+    Пользователь должен видеть подтверждение того, что Товары добавлены в Корзину.
+  prerequisites: |
+    Пользователь находится на Главной странице сайта. 
+  test-data: |
+    -
+  steps: |
+    - Нажимаем кнопку Add to cart на любом товаре
+  expected-results:  |
+   Появляется всплывающее окно: Товары успешно добавлены в Корзину. Над словом Cart появляется голубой кружок с цифрой 1.
+
+- summary: |
+    Проверка закрытия окна подтверждения Заказа крестиком
+  requirement: |
+    Всплывающее окно с подтверждением Заказа можно закрыть путем нажатия на крестик в правом верхнем углу окна.
+  prerequisites: |
+    Пользователь находится в Корзине сайта. В Корзине имеются Товары.
+  test-data: |
+    -
+  steps: |
+    - Нажимаем кнопку Checkout
+    - Закрываем всплывающее окно с подтверждением Заказа, путем нажатия на крестик в правом верхнем углу окна.
+  expected-results:  |
+     Всплывающее окно с подтверждением Заказа закрывается.
+
+- summary: |
+    Проверка очистки Корзины после оформления заказа
+  requirement: |
+    После оформления заказа Корзина должна очиститься
+  prerequisites: |
+    Пользователь находится в Корзине сайта. В Корзине имеются Товары.
+  test-data: |
+    -
+  steps: |
+    - Нажимаем кнопку Checkout
+    - Закрываем всплывающее окно с данными заказа.
+  expected-results:  |
+     В Корзине нет товаров.
