--- a/.github/workflows/testing-report.yml
+++ b/.github/workflows/testing-report.yml
@@ -1,32 +1,28 @@
 ---
 - summary: |
-    Проверка внешнего вида Главной страницы сайта
-  status: pass
-    
-- summary: |
-    Проверка входа в пустую Корзину
-  status: pass
-    
-- summary: |
-   Работает кнопка Continue shopping в Корзине
-  status: pass
-    
-- summary: |
-    Работает возврат из Корзины на Главную страницу сайта с помощью кнопки Назад
-  status: pass
-     
-- summary: |
     Проверка кнопки переключения языков
   status: pass
-    
+   
 - summary: |
     Проверка переключения языка интерфейса на русский
   status: fail
-    
+
 - summary: |
     Проверка переключения языка интерфейса на английский
   status: pass
-    
+
 - summary: |
-    Проверка сворачивания выпадающего меню по нажатию на кнопку Language.
-  status: pass
+    Проверка автоматического сворачивания выпадающего меню выбора языка
+  status: fail
+
+- summary: |
+    Проверка подтверждения добавления товаров в Корзину 
+  status: fail
+
+- summary: |
+    Проверка закрытия окна подтверждения Заказа крестиком
+  status: fail
+
+- summary: |
+    Проверка очистки Корзины после оформления заказа
+  status: fail
