--- a/.github/workflows/regress-report.yml
+++ b/.github/workflows/regress-report.yml
@@ -24,7 +24,7 @@ test-cases:
 bugreports:
   - summary: |
       При снятии галочки с фильтра In stock не работает фильтрация 
-    environment: >
+    environment: |
       Яндекс Браузер версия 22.11.5.715 (64-bit), Windows 10 Pro
       Версия	21H2 Сборка ОС	19044.1415
     steps-to-reproduce: |
@@ -39,16 +39,16 @@ bugreports:
       Выдача товаров на Главной странице не меняется.
   - summary: |
       Кнопки удаления товаров из корзины расположены не ровно по вертикали
-    environment: >
+    environment: |
       Яндекс Браузер версия 22.11.5.715 (64-bit), Windows 10 Pro
       Версия	21H2 Сборка ОС	19044.1415
     steps-to-reproduce: |
       1. Добавть 3 или более товаров в Корзину.
       2. Перейти в Корзину.
-    expected-result: >
+    expected-result: |
       В Корзине находится таблица с выбранными товарами. Данные в
       таблице выровнены по вертикали.
-    actual-result: >
+    actual-result: |
       В Корзине находится таблица с выбранными товарами. Данные в
       столбцах с количеством товаров и кнопками удаления расположены не ровно по
       вертикали.
