--- a/bugreports.yml
+++ b/bugreports.yml
@@ -38,7 +38,7 @@
      Товары остаются в Корзине.
 
 - summary: |
-   В Корзине появляются удаленные товары после ее очистки и перезагрузки.
+   В Корзине появляются удаленные товары после ее очистки и перезагрузки страницы.
   environment: |
    Яндекс Браузер версия 22.11.5.715 (64-bit), Windows 10 Pro Версия	21H2 Сборка ОС	19044.1415
   steps-to-reproduce: |
