--- a/test-cases.yml
+++ b/test-cases.yml
@@ -9,7 +9,7 @@
     -
   steps: |
     - Нажимаем кнопку Language в шапке сайта
-  expected-results: |
+  expected-result: |
     появляется выпадающее меню с выбором языков 
     
 - summary: |
@@ -23,7 +23,7 @@
   steps: |
     - Нажимаем кнопку Language в шапке сайта
     - Выбираем кнопку Russian в выпадающем меню
-  expected-results: |
+  expected-result: |
     Язык интерфейса  сайта меняется на русский (всё, кроме оригинальных названий товаров и брендов) 
     
 - summary: |
@@ -37,7 +37,7 @@
   steps: |
     - Нажимаем кнопку Язык в шапке сайта
     - Выбираем кнопку English в выпадающем меню
-  expected-results: |
+  expected-result: |
     Язык интерфейса сайта меняется на английский 
     
 - summary: |
@@ -51,7 +51,7 @@
   steps: |
     - Нажимаем кнопку Checkout
     - Закрываем всплывающее окно с подтверждением Заказа, путем нажатия на крестик в правом верхнем углу окна.
-  expected-results:  |
+  expected-result:  |
      Всплывающее окно с подтверждением Заказа закрывается.
 
 - summary: |
@@ -65,7 +65,7 @@
   steps: |
     - Нажимаем кнопку Checkout
     - Закрываем всплывающее окно с данными заказа.
-  expected-results:  |
+  expected-result:  |
      В Корзине нет товаров.
      
 - summary: |
@@ -79,5 +79,5 @@
   steps: |
     - Нажимаем кнопку Clear cart
     - Нажимаем кнопку перезагрузки страницы в браузере
-  expected-results:  |
+  expected-result:  |
      В Корзине нет товаров.
