--- a/test-cases.yml
+++ b/test-cases.yml
@@ -8,7 +8,7 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку Language в шапке сайта
+    - Нажимаем кнопку #Language в шапке сайта
   expected-result: |
     появляется выпадающее меню с выбором языков 
     
@@ -21,8 +21,8 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку Language в шапке сайта
-    - Выбираем кнопку Russian в выпадающем меню
+    - Нажимаем кнопку #Language в шапке сайта
+    - Выбираем кнопку #Russian в выпадающем меню
   expected-result: |
     Язык интерфейса  сайта меняется на русский (всё, кроме оригинальных названий товаров и брендов) 
     
@@ -36,7 +36,7 @@
     -
   steps: |
     - Нажимаем кнопку Язык в шапке сайта
-    - Выбираем кнопку English в выпадающем меню
+    - Выбираем кнопку #English в выпадающем меню
   expected-result: |
     Язык интерфейса сайта меняется на английский 
     
@@ -49,7 +49,7 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку Checkout
+    - Нажимаем кнопку #Checkout
     - Закрываем всплывающее окно с подтверждением Заказа, путем нажатия на крестик в правом верхнем углу окна.
   expected-result:  |
      Всплывающее окно с подтверждением Заказа закрывается.
@@ -63,7 +63,7 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку Checkout
+    - Нажимаем кнопку #Checkout
     - Закрываем всплывающее окно с данными заказа.
   expected-result:  |
      В Корзине нет товаров.
@@ -77,7 +77,7 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку Clear cart
+    - Нажимаем кнопку #Clear cart
     - Нажимаем кнопку перезагрузки страницы в браузере
   expected-result:  |
      В Корзине нет товаров.
