--- a/test-cases.yml
+++ b/test-cases.yml
@@ -21,8 +21,8 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку #Language в шапке сайта
-    - Выбираем кнопку #Russian в выпадающем меню
+    Нажимаем кнопку Language в шапке сайта
+    Выбираем кнопку Russian в выпадающем меню
   expected-result: |
     Язык интерфейса  сайта меняется на русский (всё, кроме оригинальных названий товаров и брендов) 
     
@@ -35,8 +35,8 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку Язык в шапке сайта
-    - Выбираем кнопку #English в выпадающем меню
+    Нажимаем кнопку Язык в шапке сайта
+    Выбираем кнопку English в выпадающем меню
   expected-result: |
     Язык интерфейса сайта меняется на английский 
     
@@ -49,10 +49,10 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку #Checkout
-    - Закрываем всплывающее окно с подтверждением Заказа, путем нажатия на крестик в правом верхнем углу окна.
+    Нажимаем кнопку Checkout
+    Закрываем всплывающее окно с подтверждением Заказа, путем нажатия на крестик в правом верхнем углу окна.
   expected-result:  |
-     Всплывающее окно с подтверждением Заказа закрывается.
+    Всплывающее окно с подтверждением Заказа закрывается.
 
 - summary: |
     Проверка очистки Корзины после оформления заказа
@@ -63,10 +63,10 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку #Checkout
-    - Закрываем всплывающее окно с данными заказа.
+    Нажимаем кнопку Checkout
+    Закрываем всплывающее окно с данными заказа.
   expected-result:  |
-     В Корзине нет товаров.
+    В Корзине нет товаров.
      
 - summary: |
     Проверка очистки Корзины после перезагрузки страницы
@@ -77,7 +77,7 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку #Clear cart
-    - Нажимаем кнопку перезагрузки страницы в браузере
+    Нажимаем кнопку Clear cart
+    Нажимаем кнопку перезагрузки страницы в браузере
   expected-result:  |
-     В Корзине нет товаров.
+    В Корзине нет товаров.
