--- a/test-cases.yml
+++ b/test-cases.yml
@@ -8,7 +8,7 @@
   test-data: |
     -
   steps: |
-    - Нажимаем кнопку #Language в шапке сайта
+    - Нажимаем кнопку Language в шапке сайта
   expected-result: |
     появляется выпадающее меню с выбором языков 
     
@@ -53,7 +53,6 @@
     Закрываем всплывающее окно с подтверждением Заказа, путем нажатия на крестик в правом верхнем углу окна.
   expected-result:  |
     Всплывающее окно с подтверждением Заказа закрывается.
-
 - summary: |
     Проверка очистки Корзины после оформления заказа
   requirement: |
