--- a/requirements.yml
+++ b/requirements.yml
@@ -1,11 +1,11 @@
 ---
-- functional:
+- functional: |
   Пользователь должен иметь возможность искать товары по ключевому слову или категории
   Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию c товаре
   Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   
-- nonfunctional:
+- nonfunctional: |
   Сайт должен быть разработан c учетом удобства использования и оптимизирован для скорости работы
   Сайт должен быть безопасным и защищать данные пользователя
   Сайт должен иметь мобильную версию
@@ -13,7 +13,7 @@
   Сайт должен быть способен обрабатывать большое количество трафика
   Сайт должен быть доступен на различных устройствах
   
-- implicit:
+- implicit: |
   Должна быть на сайте  форма обратной связи c колл-центром или ботом
   Должна быть возможность создать Личный кабинет пользователя
   Должна быть система оценок товаров пользователями c возможностью оставить отзыв c товаре
