--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,71 +1,71 @@
 ---
 - summary: |
-    Проверка кнопки переключения языков
+    "Проверка кнопки переключения языков"
   requirement: |
-    Пользователь имеет возможность переключить язык интерфейса (английский или русский)
+    "Пользователь имеет возможность переключить язык интерфейса (английский или русский)"
   prerequisites: |
-    Пользователь находится на Главной странице сайта. 
-  steps: |
-    - Нажимаем кнопку Language в шапке сайта
+    "Пользователь находится на Главной странице сайта."
+  steps:
+    - "Нажимаем кнопку Language в шапке сайта"
   expected-result: |
-    появляется выпадающее меню с выбором языков 
+    "появляется выпадающее меню с выбором языков" 
     
 - summary: |
-    Проверка переключения языка интерфейса на русский
+    "Проверка переключения языка интерфейса на русский"
   requirement: |
-    Пользователь имеет возможность переключить язык интерфейса на русский
+    "Пользователь имеет возможность переключить язык интерфейса на русский"
   prerequisites: |
-    Пользователь находится на Главной странице сайта. Данные на сайте отображаются на английском языке.
-  steps: |
-    Нажимаем кнопку Language в шапке сайта
-    Выбираем кнопку Russian в выпадающем меню
+    "Пользователь находится на Главной странице сайта. Данные на сайте отображаются на английском языке."
+  steps:
+    - "Нажимаем кнопку Language в шапке сайта"
+    - "Выбираем кнопку Russian в выпадающем меню"
   expected-result: |
-    Язык интерфейса  сайта меняется на русский (всё, кроме оригинальных названий товаров и брендов) 
+    "Язык интерфейса  сайта меняется на русский (всё, кроме оригинальных названий товаров и брендов)"
     
 - summary: |
-    Проверка переключения языка интерфейса на английский
+    "Проверка переключения языка интерфейса на английский"
   requirement: |
-    Пользователь имеет возможность переключить язык интерфейса на английский
+    "Пользователь имеет возможность переключить язык интерфейса на английский"
   prerequisites: |
-    Пользователь находится на Главной странице сайта. Данные на сайте отображаются на русском языке.
-  steps: |
-    Нажимаем кнопку Язык в шапке сайта
-    Выбираем кнопку English в выпадающем меню
+    "Пользователь находится на Главной странице сайта. Данные на сайте отображаются на русском языке."
+  steps:
+    - "Нажимаем кнопку Язык в шапке сайта"
+    - "Выбираем кнопку English в выпадающем меню"
   expected-result: |
-    Язык интерфейса сайта меняется на английский 
+    "Язык интерфейса сайта меняется на английский"
     
 - summary: |
-    Проверка закрытия окна подтверждения Заказа кликом на крестик
+    "Проверка закрытия окна подтверждения Заказа кликом на крестик"
   requirement: |
-    Всплывающее окно с подтверждением Заказа можно закрыть путем нажатия на крестик в правом верхнем углу окна.
+    "Всплывающее окно с подтверждением Заказа можно закрыть путем нажатия на крестик в правом верхнем углу окна."
   prerequisites: |
-    Пользователь находится в Корзине сайта. В Корзине имеются Товары.
-  steps: |
-    Нажимаем кнопку Checkout
-    Закрываем всплывающее окно с подтверждением Заказа, путем нажатия на крестик в правом верхнем углу окна.
+    "Пользователь находится в Корзине сайта. В Корзине имеются Товары."
+  steps:
+    - "Нажимаем кнопку Checkout"
+    - "Закрываем всплывающее окно с подтверждением Заказа, путем нажатия на крестик в правом верхнем углу окна."
   expected-result:  |
-    Всплывающее окно с подтверждением Заказа закрывается.
+    "Всплывающее окно с подтверждением Заказа закрывается."
     
 - summary: |
-    Проверка очистки Корзины после оформления заказа
+    "Проверка очистки Корзины после оформления заказа"
   requirement: |
-    После оформления заказа Корзина должна очиститься
+    "После оформления заказа Корзина должна очиститься"
   prerequisites: |
-    Пользователь находится в Корзине сайта. В Корзине имеются Товары.
-  steps: |
-    Нажимаем кнопку Checkout
-    Закрываем всплывающее окно с данными заказа.
+    "Пользователь находится в Корзине сайта. В корзине имеются Товары."
+  steps:
+    - "Нажимаем кнопку Checkout"
+    - "Закрываем всплывающее окно с данными заказа."
   expected-result:  |
-    В Корзине нет товаров.
+    "В Корзине нет товаров."
      
 - summary: |
-    Проверка очистки Корзины после перезагрузки страницы
+    "Проверка очистки Корзины после перезагрузки страницы"
   requirement: |
-    После очистки Корзины и перезагрузки страницы, Корзина должна оставаться пустой
+    "После очистки Корзины и перезагрузки страницы, Корзина должна оставаться пустой"
   prerequisites: |
-    Пользователь находится в Корзине сайта. В Корзине имеются Товары.
-  steps: |
-    Нажимаем кнопку Clear cart
-    Нажимаем кнопку перезагрузки страницы в браузере
+    "Пользователь находится в Корзине сайта. В Корзине имеются Товары."
+  steps:
+    - "Нажимаем кнопку Clear cart"
+    - "Нажимаем кнопку перезагрузки страницы в браузере"
   expected-result:  |
-    В Корзине нет товаров.
+    "В Корзине нет товаров."
