--- a/test-cases.yml
+++ b/test-cases.yml
@@ -4,7 +4,7 @@
   requirement: |
     "Пользователь имеет возможность переключить язык интерфейса (английский или русский)"
   prerequisites: |
-    "Пользователь находится на Главной странице сайта."
+    "Пользователь находится на Главной странице сайта"
   steps:
     - "Нажимаем кнопку Language в шапке сайта"
   expected-result: |
