--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,6 @@
 ---
 functional:
-  - "Пользователь должен иметь возможность искать товары по ключевому слову или категории"
+  - "Пользователь должен иметь возможность искать товары по ключевому слову, или категории"
   - "Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию c товаре"
   - "Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины"
   - "Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д."
