--- a/test-cases.yml
+++ b/test-cases.yml
@@ -5,6 +5,7 @@
     "Пользователь имеет возможность переключить язык интерфейса (английский или русский)"
   prerequisites: |
     "Пользователь находится на Главной странице сайта"
+  test-data:
   steps:
     - "Нажимаем кнопку Language в шапке сайта"
   expected-result: |
@@ -16,6 +17,7 @@
     "Пользователь имеет возможность переключить язык интерфейса на русский"
   prerequisites: |
     "Пользователь находится на Главной странице сайта. Данные на сайте отображаются на английском языке."
+  test-data:
   steps:
     - "Нажимаем кнопку Language в шапке сайта"
     - "Выбираем кнопку Russian в выпадающем меню"
@@ -28,6 +30,7 @@
     "Пользователь имеет возможность переключить язык интерфейса на английский"
   prerequisites: |
     "Пользователь находится на Главной странице сайта. Данные на сайте отображаются на русском языке."
+  test-data:
   steps:
     - "Нажимаем кнопку Язык в шапке сайта"
     - "Выбираем кнопку English в выпадающем меню"
@@ -40,6 +43,7 @@
     "Всплывающее окно с подтверждением Заказа можно закрыть путем нажатия на крестик в правом верхнем углу окна."
   prerequisites: |
     "Пользователь находится в Корзине сайта. В Корзине имеются Товары."
+  test-data:
   steps:
     - "Нажимаем кнопку Checkout"
     - "Закрываем всплывающее окно с подтверждением Заказа, путем нажатия на крестик в правом верхнем углу окна."
@@ -52,6 +56,7 @@
     "После оформления заказа Корзина должна очиститься"
   prerequisites: |
     "Пользователь находится в Корзине сайта. В корзине имеются Товары."
+  test-data:
   steps:
     - "Нажимаем кнопку Checkout"
     - "Закрываем всплывающее окно с данными заказа."
@@ -64,6 +69,7 @@
     "После очистки Корзины и перезагрузки страницы, Корзина должна оставаться пустой"
   prerequisites: |
     "Пользователь находится в Корзине сайта. В Корзине имеются Товары."
+  test-data:
   steps:
     - "Нажимаем кнопку Clear cart"
     - "Нажимаем кнопку перезагрузки страницы в браузере"
